--- a/正则.md
+++ b/正则.md
@@ -1,1 +1,79 @@
- **\d，\w,\s,[a-zA-Z0-9],\b,.,*,+,?,x{3},^$分别是什么?**
+**题目1： \d，\w,\s,[a-zA-Z0-9],\b,.,*,+,?,x{3},^$分别是什么?**
+> \d:[0-9],匹配0-9间任意数字
+
+> \w:[a-zA-Z_0-9],匹配大写A-Z,小写a-z，数字0-9，以及下划线_
+
+> \s:[\n\f\r\t\v],匹配一个空白字符
+
+> [a-zA-Z0-9]:匹配大写A-Z,小写a-z，数字0-9
+
+> \b:匹配一个单词的边界
+
+> .:表示匹配除回车（\r）、换行(\n) 、行分隔符（\u2028）和段分隔符（\u2029）以外的所有字符
+
+> +：表示加号表示某个模式出现1次或多次，等价于{1,}
+
+> ？：问号表示某个模式出现0次或1次，等价于{0, 1}
+
+> x｛3｝：表示查找符合x出现三次以上的元素
+
+> ^$：匹配空字符串（连一个空格也没有的）
+
+**题目2： 写一个函数trim(str)，去除字符串两边的空白字符**
+```
+function trim(str){
+    return str.replace(/^\s+|\s+$/g,'')
+}
+```
+**题目3： 写一个函数isEmail(str)，判断用户输入的是不是邮箱**
+```
+function judgeEmail(addresss) {
+    var way=/^\w+@[\w.-]+$/g;
+    return way.test(addresss)
+}
+```
+
+**题目4： 写一个函数isPhoneNum(str)，判断用户输入的是不是手机号**
+```
+function isPhoneNum(num){
+    var way=/^(\+86-)?|[356789]\d{9}$/
+    return way.test(num)
+}
+```
+**题目5： 写一个函数isValidUsername(str)，判断用户输入的是不是合法的用户名（长度6-20个字符，只能包括字母、数字、下划线）**
+```
+functionisPassword(password){
+var way=/^\w{6,20}$/;
+return way.test(password)
+}
+```
+
+**题目6： 写一个函数isValidPassword(str), 判断用户输入的是不是合法密码（长度6-20个字符，只包括大写字母、小写字母、数字、下划线，且至少至少包括两种）**
+```
+function isPassword(password) {
+    if(password.length<6||password.length>20||/\W/.test(password))
+        return false;
+    if (/^[A-Z]+$)/.test(password) return false;
+    if (/^[a-z]+$)/.test(password) return false;
+    if (/^[0-9]+$)/.test(password) return false;
+    if (/^_+$)/.test(password) return false;
+        return true;
+
+}
+```
+**题目7： 写一个正则表达式，得到如下字符串里所有的颜色**
+
+```
+var re =/#[0-9a-fA-F]{6}/g;
+var subj = "color: #121212; background-color: #AA00ef; width: 12px; bad-colors: f#fddee "
+console.log( subj.match(re) )  
+```
+**题目8： 下面代码输出什么? 为什么? 改写代码，让其输出[""hunger"", ""world""].**
+```
+
+var str = 'hello  "hunger" , hello "world"';
+var pat =  /".*"/g;//贪婪模式，尽可能多的匹配
+str.match(pat);
+
+ var pat =  /".*?"/g;//非贪婪模式，使匹配次数不定的表达式尽可能少的匹配
+```
