--- a/事件.md
+++ b/事件.md
@@ -1,4 +1,4 @@
-HINC题目1： DOM0 事件和DOM2级在事件监听使用方式上有什么区别？
+HINC题目1： DOM0 事件和DOM2级在事件监听使用方式上有什么区别
 DOM0事件通过JavaScript指定事件将一个函数方法直接赋值给一个元素事件处理程序事件。将这些属性设置一个函数，这样事件处理程序认为是元素的方法，事件处理在元素的作用域下运行，this即指向当前元素。
 DOM2事件定义两个方法addEveListener和removeEveListener前者添加监听事件后者移除监听事件。所有DOM节点都包含这两个方法，并且他们都接受三个参数，并且事件程序也是在元素的作用域下运行。可以为该元素添加多个事件处理程序。
 事件处理类型
